examples/good/09-05-overriding-and-static-binding.elina
fn f(x: int): void {
  var message: string = "Hello";
  while (x >= 1) {
    x--;
    printString(message);
    var message: string = "Goodbye";
  }
}

fn main(): void {
  f(3);
}