examples/bad/wrong-return-type-void.elina
fn f(): string {
  return;
}

fn main(): void {
}